[tool.poetry]
name = "repl_python3_Autoshark"
version = "0.1.0"
description = ""
authors = ["Razua9617 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
colorama = "^0.4.4"
pyfiglet = "^0.8.post1"
termcolor = "^1.1.0"
dpkt = "^1.9.6"
pyshark = "^0.4.3"
scapy = "^2.4.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
